force-app/main/default/objects/Geocoding_Service__c/Geocoding_Service__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Geocoding Service</label>
</CustomObject>