force-app/main/default/objects/Geocoding_Service__c/fields/Enable_Geocoding__c.field-meta.xml
<CustomField>
    <fullName>Enable_Geocoding__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, records will be geocoded according to the configuration for the objects that have implemented the necessary Apex Trigger. Otherwise the logic will be skipped.</inlineHelpText>
    <label>Enable Geocoding</label>
    <type>Checkbox</type>
</CustomField>