force-app/main/default/objects/Geocoding_Service__c/fields/Geocoding_Service__c.field-meta.xml
<CustomField>
    <fullName>Geocoding_Service__c</fullName>
    <inlineHelpText>If populated, all addresses, for the activated objects (Apex Trigger), will be geocoded using this service. Accepted values: &quot;Google&quot; for the Google Geocoding API or &quot;Salesforce Maps&quot; for the Salesforce Maps Geocoder API. If empty, Data Integration Rules will be used or country specific configurations as defined in the custom metadata: &quot;Geocoding Country Config&quot;</inlineHelpText>
    <label>Geocoding Service</label>
    <length>100</length>
    <type>Text</type>
</CustomField>