force-app/main/default/objects/Geocoding_Service__c/fields/Service_To_Use_Google_or_Maps__c.field-meta.xml
<CustomField>
    <fullName>Service_To_Use_Google_or_Maps__c</fullName>
    <inlineHelpText>Accepted values: Google or Maps for Google Geocoding API or Salesforce Maps Geocoder API respectively. Any other value, logic will be skipped.</inlineHelpText>
    <label>Service To Use (Google or Maps)</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>